<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/txtBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/txtBill"
        android:inputType="numberDecimal"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/txtPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtBill"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/txtPeople"
        android:inputType="number"
        android:textSize="32sp" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/txtGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPeople"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:entries="@array/txtGroup"
        android:prompt="@string/prompt" />

    <Button
        android:id="@+id/btnSplit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:text="@string/btnSplit"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSplit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:textSize="25sp" />

</RelativeLayout>
